--- a/Discover/style.css
+++ b/Discover/style.css
@@ -159,13 +159,18 @@ ul li a:hover{
     align-items: center;
     justify-content: center;
     padding: 16px;
-
+    
     transition: backgroud 0.2;
     border-radius: 50%;
+    
 }
 
 #social a:hover{
     background: var(--highlight-color);
+    box-shadow:
+        2.4px -3px 7.2px -2px var(--stroke-color),
+        6px -4px 29px -2px  var(--stroke-color),
+        12px -5px 80px -2px var(--stroke-color);
 }
 
 footer{
